# ban-evasion-detection

./: .gitignore  README.md  build_release.ps1  docker-compose.yml  fingerprint.proto  run_client.ps1  schema.sql
anticheat_kernel/: fingerprint_defs.h  meson.build  mydriver.c  mydriver.rc
anticheat_user/: .env  .env-release  base64.hpp  crypto.cpp  crypto.h  dllmain.cpp  fingerprint.cpp  fingerprint.h  meson.build  meson.options  stdafx.h
anticheat_user/subprojects/TSS.CPP/: meson.build
anticheat_user/subprojects/TSS.CPP/Src/: Crypto.cpp  Tpm2.cpp  TpmHelpers.cpp  TpmTypes.cpp  stdafx.h
anticheat_user/subprojects/TSS.CPP/include/: Helpers.h  fdefs.h
game/: Client.cs  ClientConfirm.cs  ClientHello.cs  ClientState.cs  Message.cs  MyMessage.cs  Profiler.cs  ProfilerZone.cs  Program.cs  Server.cs  ServerConfirm.cs  ServerHello.cs  User.cs  game.csproj  game.sln
game/Anticheat/: Anticheat.cs  FingerprintVerifier.cs  TpmCertificate.cs  TpmCredential.cs  VpnList.cs
